# ralph-loop

./: .gitignore  AGENTS.md  BLUEPRINT.md  CHANGELOG.md  CODEBASE.md  CONTEXT.md  README.md  opencode.json  pyproject.toml  ralph.sh
.opencode/: RULES.md  update.sh
.opencode/agents/: reflect.md  vibe.md
.opencode/skills/memory/: SKILL.md
.opencode/skills/todo-txt/: SKILL.md
.opencode/skills/wrap-up/: SKILL.md
docs/memory/: INDEX.md
docs/worklogs/: 2026-05-20-21-35-ralph-python-cli.md  2026-05-20-22-01-opencode-option-passthrough.md  2026-05-21-19-17-ralph-thin-wrapper.md  2026-05-21-19-44-ralph-loop-rename.md  2026-05-21-19-57-help-formatting.md  2026-05-21-20-17-gemma4-example-fix.md
scripts/: bump-version.sh  validate-changelog.sh  validate-worklog.sh  verify_codebase_sync.sh
src/ralph/: cli.py  commands.py  constants.py  models.py  runtime.py  state.py
src/ralph_loop/: cli.py  commands.py  constants.py  models.py  process_runner.py  runtime.py  signal_handler.py  utils.py
tasks/done/: task-01-pty-fd-leak-on-timeout.md  task-02-stdin-not-forwarded.md  task-03-silent-hang-on-pipe-input.md  task-04-exception-in-signal-handler.md  task-05-unbounded-output-buffer.md  task-06-swallowed-oserror-on-read.md  task-07-loopsupervisor-srp-violation.md  task-08-hardcoded-work-path-in-bump-script.md  task-09-no-pyright-strict-mode.md  task-10-banner-on-stdout.md  task-11-missing-timeout-sleep-test.md  task-12-inefficient-promise-regex.md  task-13-split-runtime-utils.md  task-14-optimize-output-buffer-size-tracking.md  task-15-sync-cli-help-text.md
tests/: test_cli.py  test_commands.py  test_e2e.py  test_runtime.py  test_state.py
