[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ralph-loop"
version = "3.1.2"
description = "Installable ralph-loop wrapper for CLI commands"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ralph-loop = "ralph_loop.cli:main"

[dependency-groups]
dev = [
  "pyright>=1.1.411",
  "pytest==9.0.3",
  "pytest-cov==6.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=ralph_loop --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
